# magicjson-py

./: Cargo.toml  pyproject.toml
.pyenv/: pyvenv.cfg
magicjson/: magicjson.pyi
src/: lib.rs
