[package]
name = "magicjson"
version = "0.0.1-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "magicjson"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
pyo3-log = "0.9.0"
magicjsonrust = { package="magicjson", version = "0.0.1-alpha.9" }
chrono = "0.4.19"